WIP: mfd repo integration
- some creepy coder removed service layer
- use generated methods to fetch and process data
