# internal/domain/models.gen.go
@@ -1,94 +1,0 @@
-// Package domain provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
-package domain
-
-import (
-	"time"
-)
-
-// APIError defines model for APIError.
-type APIError struct {
-	// Message Error message
-	Message string `json:"message"`
-}
-
-// Category Category of the news
-type Category struct {
-	// ID Numeric ID value
-	ID NumericID `json:"id"`
-
-	// Title Category title
-	Title string `json:"title"`
-}
-
-// News defines model for News.
-type News struct {
-	// Author Name of the article author
-	Author string `json:"author"`
-
-	// Category Category of the news
-	Category Category `json:"category"`
-
-	// Content Main content of the news article
-	Content string `json:"content,omitempty,omitzero"`
-
-	// ID Numeric ID value
-	ID          NumericID `json:"id"`
-	PublishedAt Timestamp `json:"published_at,omitempty,omitzero"`
-
-	// ShortText Preamble of the postamble
-	ShortText string `json:"short_text"`
-	Tags      []Tag  `json:"tags"`
-
-	// Title News title
-	Title string `json:"title"`
-}
-
-// NumericID Numeric ID value
-type NumericID = int
-
-// Tag News item's tag
-type Tag struct {
-	// ID Numeric ID value
-	ID NumericID `json:"id"`
-
-	// Name Tag name
-	Name string `json:"name"`
-}
-
-// Timestamp defines model for Timestamp.
-type Timestamp = time.Time
-
-// CategoryID defines model for CategoryID.
-type CategoryID = int
-
-// TagID defines model for TagID.
-type TagID = int
-
-// DefaultError defines model for DefaultError.
-type DefaultError = APIError
-
-// GetNewsesParams defines parameters for GetNewses.
-type GetNewsesParams struct {
-	// CategoryID Filter by category ID
-	CategoryID CategoryID `form:"category_id,omitempty" json:"category_id,omitempty,omitzero"`
-
-	// TagID Filter by tag ID
-	TagID TagID `form:"tag_id,omitempty" json:"tag_id,omitempty,omitzero"`
-
-	// Page Number of the page
-	Page int `form:"page,omitempty" json:"page,omitempty,omitzero"`
-
-	// PerPage Count of the items per page
-	PerPage int `form:"per_page,omitempty" json:"per_page,omitempty,omitzero"`
-}
-
-// GetNewsCountParams defines parameters for GetNewsCount.
-type GetNewsCountParams struct {
-	// CategoryID Filter by category ID
-	CategoryID CategoryID `form:"category_id,omitempty" json:"category_id,omitempty,omitzero"`
-
-	// TagID Filter by tag ID
-	TagID TagID `form:"tag_id,omitempty" json:"tag_id,omitempty,omitzero"`
-}
